# IntentTrade

./: .env.example  .gitignore  LICENSE  README.md  ecosystem.config.cjs  pyproject.toml  requirements.txt
config/: settings.yaml  ticker_aliases.yaml
data/sample/: kol_posts.json  price_fallback.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: app.js
frontend/src/: App.jsx  api.js  styles.css  utils.js
frontend/src/components/: KlineChart.jsx
scripts/: poll_kol.py  run_demo.py
src/intent_trade/: __init__.py  cli.py  config.py  time_utils.py
src/intent_trade/analysis/: __init__.py  agent_tools.py  intent.py  llm_client.py  multimodal.py  ticker_map.py
src/intent_trade/backtest/: __init__.py  stats.py
src/intent_trade/execution/: __init__.py  paper.py  timing.py
src/intent_trade/market/: __init__.py  klines.py  prices.py
src/intent_trade/models/: __init__.py  domain.py
src/intent_trade/pipeline/: runner.py
src/intent_trade/storage/: db.py
src/intent_trade/twitter/: __init__.py  client.py
src/intent_trade/web/: __init__.py  app.py  poller.py
src/intent_trade/web/static/: index.html
src/intent_trade/web/static/assets/: index-BL4N0AFK.css  index-BT6_l1PU.js  index-BpYhzJ6e.css  index-CJU3UmrE.js  index-CXNWCM-V.js  index-DlDHTQSK.css
tests/: test_background_poller.py  test_intent_and_tickers.py  test_klines.py  test_llm_image_input.py  test_llm_tool_loop.py  test_post_history_persistence.py  test_timing_and_signal_flow.py  test_twitter_bird_feed.py  test_web_ui_routes.py
