[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-trade"
version = "0.1.0"
description = "Research tool: LLM parses KOL Twitter trading intent and paper-copies explicit signals (noncommercial)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pyyaml>=6.0",
  "httpx[socks]>=0.27.0",
  "yfinance>=0.2.40",
  "pandas>=2.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "sqlalchemy>=2.0.0",
  "anthropic>=0.34.0",
  "tweepy>=4.14.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.scripts]
intent-trade = "intent_trade.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intent_trade = ["py.typed"]
